@@ -24,23 +24,23 @@
  * Portions created by the i-MSCP Team are Copyright (C) 2010-2014 by
  * i-MSCP - internet Multi Server Control Panel. All Rights Reserved.
  *
- * @category	i-MSCP
- * @package		iMSCP_Core
- * @subpackage	Reseller
- * @copyright	2001-2006 by moleSoftware GmbH
- * @copyright	2006-2010 by ispCP | http://isp-control.net
- * @copyright	2010-2014 by i-MSCP | http://i-mscp.net
- * @author		ispCP Team
- * @author		i-MSCP Team
- * @link		http://i-mscp.net
+ * @category    i-MSCP
+ * @package     iMSCP_Core
+ * @subpackage  Reseller
+ * @copyright   2001-2006 by moleSoftware GmbH
+ * @copyright   2006-2010 by ispCP | http://isp-control.net
+ * @copyright   2010-2014 by i-MSCP | http://i-mscp.net
+ * @author      ispCP Team
+ * @author      i-MSCP Team
+ * @link        http://i-mscp.net
  */
 
-/*********************************************************************************
+/***********************************************************************************************************************
  * Script functions
  */
 
 /**
- * Returns traffic information for the given domain and period.
+ * Returns traffic information for the given domain and period
  *
  * @access private
  * @param int $domainId domain unique identifier
@@ -52,12 +52,12 @@ function _reseller_getDomainTraffic($domainId, $beginTime, $endTime)
 {
 	$query = "
 		SELECT
-			IFNULL(SUM(`dtraff_web`), 0) `web_dr`, IFNULL(SUM(`dtraff_ftp`), 0) `ftp_dr`,
-			IFNULL(SUM(`dtraff_mail`), 0) `mail_dr`, IFNULL(SUM(`dtraff_pop`), 0) `pop_dr`
+			IFNULL(SUM(dtraff_web), 0) web_dr, IFNULL(SUM(dtraff_ftp), 0) ftp_dr,
+			IFNULL(SUM(dtraff_mail), 0) mail_dr, IFNULL(SUM(dtraff_pop), 0) pop_dr
 		FROM
-			`domain_traffic`
+			domain_traffic
 		WHERE
-			`domain_id` = ? AND `dtraff_time` >= ? AND `dtraff_time` <= ?
+			domain_id = ? AND dtraff_time >= ? AND dtraff_time <= ?
 	";
 	$stmt = exec_query($query, array($domainId, $beginTime, $endTime));
 
@@ -71,7 +71,7 @@ function _reseller_getDomainTraffic($domainId, $beginTime, $endTime)
 }
 
 /**
- * Generate domain statistics for the given period.
+ * Generate domain statistics for the given period
  *
  * @param iMSCP_pTemplate $tpl Template engine instance
  * @param int $domainId Domain unique identifier
@@ -82,7 +82,7 @@ function _reseller_getDomainTraffic($domainId, $beginTime, $endTime)
 function reseller_generatePage($tpl, $domainId, $month, $year)
 {
 	// Let see if the domain exists
-	$stmt = exec_query('SELECT `domain_id`, `domain_name` FROM `domain` WHERE `domain_id` = ?', $domainId);
+	$stmt = exec_query('SELECT domain_id, domain_name FROM domain WHERE domain_id = ?', $domainId);
 
 	if (!$stmt->rowCount()) {
 		set_page_message(tr('Domain not found.'), 'error');
@@ -92,7 +92,7 @@ function reseller_generatePage($tpl, $domainId, $month, $year)
 	}
 
 	// Let see if we have any statistics available for the given periode
-	$query = "SELECT `domain_id` FROM `domain_traffic` WHERE `dtraff_time` > ? AND `dtraff_time` < ? LIMIT 1";
+	$query = "SELECT domain_id FROM domain_traffic WHERE dtraff_time >= ? AND dtraff_time <= ? LIMIT 1";
 	$stmt = exec_query($query, array(getFirstDayOfMonth($month, $year), getLastDayOfMonth($month, $year)));
 
 	$tpl->assign('DOMAIN_ID', $domainId);
@@ -110,7 +110,7 @@ function reseller_generatePage($tpl, $domainId, $month, $year)
 
 			list(
 				$webTraffic, $ftpTraffic, $smtpTraffic, $popTraffic
-				) = _reseller_getDomainTraffic($domainId, $beginTime, $endTime);
+			) = _reseller_getDomainTraffic($domainId, $beginTime, $endTime);
 
 			$tpl->assign(
 				array(
@@ -149,7 +149,7 @@ function reseller_generatePage($tpl, $domainId, $month, $year)
 	}
 }
 
-/*********************************************************************************
+/***********************************************************************************************************************
  * Main script
  */
 
@@ -180,7 +180,6 @@ $tpl->assign(
 	array(
 		'TR_PAGE_TITLE' => tr('Reseller / Statistics / Overview / Domain Statistics - {DOMAIN_NAME}'),
 		'ISP_LOGO' => layout_getUserLogo(),
-		'TR_DOMAIN_STATISTICS' => tr('Domain statistics'),
 		'TR_MONTH' => tr('Month'),
 		'TR_YEAR' => tr('Year'),
 		'TR_SHOW' => tr('Show'),
@@ -217,12 +216,12 @@ if (!isset($domainId)) {
 
 // Retrieve smaller timestamp to define max number of years to show in select element
 $stmt = exec_query(
-	'SELECT `dtraff_time` FROM `domain_traffic` WHERE `domain_id` = ? ORDER BY `dtraff_time` ASC LIMIT 1', $domainId
+	'SELECT dtraff_time FROM domain_traffic WHERE domain_id = ? ORDER BY dtraff_time ASC LIMIT 1', $domainId
 );
 
-if($stmt->recordCount()) {
+if ($stmt->rowCount()) {
 	$numberYears = date('y') - date('y', $stmt->fields['dtraff_time']);
-	$numberYears = $numberYears == 0 ? 1 : $numberYears;
+	$numberYears =  $numberYears ? $numberYears + 1: 1;
 } else {
 	$numberYears = 1;
 }
